--- a/ExemploUnitOfWorkDapper/packages.config
+++ b/ExemploUnitOfWorkDapper/packages.config
@@ -1,7 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="bootstrap" version="3.0.0" targetFramework="net45" />
+  <package id="Dapper" version="1.40" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="jQuery" version="1.10.2" targetFramework="net45" />
+  <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Modernizr" version="2.6.2" targetFramework="net45" />
+  <package id="SimpleInjector" version="2.8.0" targetFramework="net45" />
+  <package id="SimpleInjector.Integration.Web" version="2.8.0" targetFramework="net45" />
+  <package id="SimpleInjector.Integration.Web.Mvc" version="2.8.0" targetFramework="net45" />
 </packages>
